discussion/kv_engine/174519/174519_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add optional random sampling mode to range-scan

The range scan functionality can be adapted so that a client
could request that the scan returns a random number of keys
or documents.

This commit adds an optional configuration parameter that
will allow a client to set a prng seed value and a number
of samples to return. If the collection in the snapshot
has more items than samples, the range scan continue will
return a random set of keys or documents.

Change-Id: I3ca3af43e5e04d621a4f1df164fefcaebd106149

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-10 09:01:40.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-10 09:23:19.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19492/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19492/ )

Compile error at [2022-05-10T09:23:01.321Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:45:
error: cannot convert ?cb::engine_errc? to ?std::optional<cb::rangescan::SamplingConfiguration>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27550/ : FAILURE

Compile error at [2022-05-10T09:18:22.432Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28:
error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27550/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46028/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(642): error C2664: "cb::rangescan::Id RangeScanTest::createScan(CollectionID,cb::rangescan::KeyView,cb::rangescan::KeyView,std::optional<cb::rangescan::SnapshotRequirements>,std::optional<cb::rangescan::SamplingConfiguration>,cb::engine_errc)": cannot convert argument 5 from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17388/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28: error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>" [clang-diagnostic-error]
                           cb::engine_errc::success);
                           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:659:11: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "cb::engine_errc" to "const std::optional<cb::rangescan::SamplingConfiguration> &" for 1st argument
    class optional
          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:659:11: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration> &&" for 1st argument
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:693:17: note: candidate constructor not viable: no known conversion from "cb::engine_errc" to "std::nullopt_t" for 1st argument
      constexpr optional(nullopt_t) noexcept { }
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:701:2: note: candidate template ignored: requirement "__and_v<std::__not_<std::is_same<std::optional<cb::rangescan::SamplingConfiguration>, cb::engine_errc> >, std::__not_<std::is_same<std::in_place_t, cb::engine_errc> >, std::is_constructible<cb::rangescan::SamplingConfiguration, cb::engine_errc &&>, std::is_convertible<cb::engine_errc &&, cb::rangescan::SamplingConfiguration> >" was not satisfied [with _Up = cb::engine_errc]
        optional(_Up&& __t)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:718:2: note: candidate template ignored: could not match "optional<type-parameter-0-0>" against "cb::engine_errc"
        optional(const optional<_Up>& __t)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/optional:742:2: note: candidate template ignored: could not match "optional<type-parameter-0-0>" against "cb::engine_errc"
        optional(optional<_Up>&& __t)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:226:61: note: passing argument to parameter "samplingConfig" here
        std::optional<cb::rangescan::SamplingConfiguration> samplingConfig,
                                                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17388/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28:
error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17388/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7093/ : FAILURE

Compile error at [2022-05-10T09:07:31.695Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:45:
error: cannot convert ?cb::engine_errc? to ?std::optional<cb::rangescan::SamplingConfiguration>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7001/ : FAILURE

Compile error at [2022-05-10T09:17:40.503Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28:
error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7001/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18342/ : FAILURE

Compile error at [2022-05-10T09:09:17.596Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28:
error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20176/ : FAILURE

Compile error at [2022-05-10T09:15:09.808Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:28:
error: no viable conversion from "cb::engine_errc" to "std::optional<cb::rangescan::SamplingConfiguration>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19149/ : FAILURE

Compile error at [2022-05-10T09:18:04.417Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:646:45:
error: cannot convert ?cb::engine_errc? to ?std::optional<cb::rangescan::SamplingConfiguration>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19149/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38655/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
